--- a/SwissPouch/SwissPouch.csproj
+++ b/SwissPouch/SwissPouch.csproj
@@ -130,8 +130,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Attributes\Owsv.cs" />
-    <Compile Include="Attributes\Twsv.cs" />
+    <Compile Include="Attributes\OwsvAttribute.cs" />
+    <Compile Include="Attributes\TwsvAttribute.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -167,9 +167,9 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Utilities.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
